component splitScreen created

--- a/MiniWebsite/mini-website/readme
+++ b/MiniWebsite/mini-website/readme
@@ -4,3 +4,4 @@ The diagram can be found here https://excalidraw.com/#json=MIAD50DwcjweLcOhZwlhQ
 
 The Objective of this project is to create a small website where I can upload photos taken during my travels in the UK
 
+This mini website will be updated regularly adding more features!
