--- a/MiniWebsite/mini-website/readme
+++ b/MiniWebsite/mini-website/readme
@@ -1,6 +1,6 @@
 This is my first long term project!!!
 
-The diagram can be found here https://excalidraw.com/#json=MIAD50DwcjweLcOhZwlhQ,2ZgPaeTztASiv27sgioxYw
+The diagram can be found here https://excalidraw.com/#json=8LwdTeRHQ95mLrjH4KrYR,qcwYATtZ5PVMbeMs4Us1RQ
 
 The Objective of this project is to create a small website where I can upload photos taken during my travels in the UK
 
