--- a/ScrollAnimation/readme
+++ b/ScrollAnimation/readme
@@ -1,3 +1,3 @@
-This component will allow the icons and pages to become visable when the user scrolls down the page! 
+This component will allow the icons and pages to become visable when the user scrolls down the page which increases the UX by allowing the user to be have a more immersive experience!
 
-It is used to make UX more immersive and add quality to the web-page!
+The use of Framer Motion and useInView was particularly enjoyable and opens me up to alot of possibilities!
