added more pictures and updated readme

--- a/pinterest-board/readme
+++ b/pinterest-board/readme
@@ -1,1 +1,3 @@
-This component will be used in each pages to showcase the photos that me and my partner took during our travels around the UK! It is named PinterestBoard becasue it will use the similar format.
+This component will be used in each pages to showcase the photos that me and my partner took during our travels around the UK! It is named PinterestBoard because it will use the similar format! I added some scroll animation and pictures taken from my trips from Conwy and uploaded them into the page! 
+
+This is going to be the bluePrint for my Travel Diary Website's Gallery! And later on I'm going to add a feature where the pictures are click-able and it reveals information about the picture!
