updated mini-website diagram

--- a/MiniWebsite/mini-website/readme
+++ b/MiniWebsite/mini-website/readme
@@ -1,6 +1,6 @@
 This is my first long term project!!!
 
-The diagram can be found here https://excalidraw.com/#json=1yjO-emJR6uz4rylQWtSh,UaVYhw0Z09lL96Pj8Y3bNw
+The diagram can be found here https://excalidraw.com/#json=e2XQ8sBiaou6cwoFKs_y1,H56sBV5vcs1wNquK5yl29g
 
 The Objective of this project is to create a small website where I can upload photos taken during my travels in the UK
 
