--- a/MiniWebsite/mini-website/readme
+++ b/MiniWebsite/mini-website/readme
@@ -5,3 +5,7 @@ The diagram can be found here https://excalidraw.com/#json=xw8DCEqtCuRRWIzbchTVB
 The Objective of this project is to create a small website where I can upload photos taken during my travels in the UK
 
 This mini website will be updated regularly adding more features!
+
+**UPDATE**
+
+As of May 2024, I will be suspending this project since I've found an amazing library called MUI and will be mastering these components before adding anything else!
